<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layout_createProduct">
    <data>
        <import type="android.view.View"/>
        <variable
            name="category"
            type="com.example.zadaniebazydanych.model.Category" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="left"
        android:orientation="vertical">
    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@{`Add product to category - ` + category.name}"
        android:textSize="20dp"
        android:paddingLeft="16dp"
        android:textStyle="bold"
        android:layout_marginTop="5dp"/>

        <TextView
            android:id="@+id/nameHeader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Name"
            android:textSize="15dp"
            android:paddingLeft="16dp" />

        <EditText
            android:id="@+id/nameInput"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:inputType="text"/>

        <TextView
            android:id="@+id/priceHeader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Price"
            android:textSize="15dp"
            android:paddingLeft="16dp" />

        <EditText
            android:id="@+id/priceInput"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:inputType="number"/>

        <TextView
            android:id="@+id/descHeader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Description"
            android:textSize="15dp"
            android:paddingLeft="16dp" />

        <EditText
            android:id="@+id/descInput"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:inputType="text"/>

        <Button
            android:id="@+id/createProductButton"
            android:layout_width="wrap_content"
            android:layout_height="38dp"
            android:layout_gravity="center"
            android:paddingRight="16dp"
            android:text="Create product"
            android:textSize="12sp"
            android:onClick="CreateProduct"/>
    </LinearLayout>
</layout>