...
                    android:layout_gravity="right"
                    android:paddingRight="16dp"
                    android:text="@{product.category.name}"
                    android:textStyle="italic" />

                <Button
                    android:id="@+id/add_button"
                    android:layout_width="wrap_content"
                    android:layout_height="38dp"
                    android:layout_gravity="right"
                    android:paddingRight="16dp"
                    android:text="Add product"
                    android:textSize="12sp" />
...
